k3s/deployment.yaml
#
# kubectl apply -k .
#
# [1] https://hub.docker.com/_/vault
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: vault-server
  template:
    metadata:
      labels:
        component: vault-server
    spec:
      # Volumes used by some or all containers of the Pod:
      volumes:
      - name: "vault-data"
        persistentVolumeClaim:
          claimName: "vault-data"
      containers:
      - name: vault-server
        # docker run --cap-add=IPC_LOCK
        # -e 'VAULT_LOCAL_CONFIG={"backend": {"file": {"path": "/vault/file"}}, "default_lease_ttl": "168h", "max_lease_ttl": "720h"}'
        # vault server
        image: "vault"          # exact version see kustomization.yaml
        command: ["vault", "server", "-dev", "-dev-listen-address=0.0.0.0:8200"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8200
        volumeMounts:
        - mountPath: "/vault"
          name: "vault-data"
---
apiVersion: v1
kind: Service
metadata:
  name: vault-server
spec:
  type: ClusterIP
  selector:
    component: vault-server
  ports:
  - port: 8200
    targetPort: 8200
---
#
# We  assume here  that  *.localhost resolves  to  the local  machine.
# Following URL should be directed to corresponding Service, also with
# https:// protocoll:
#
#     http://vault.localhost
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault
spec:
  rules:
  - host: vault.localhost
    http:
      paths:
      - backend:
          serviceName: vault-server
          servicePort: 8200
